<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BookingPaymentActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="?attr/actionBarTheme"
        app:title="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/normal_margin"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        >

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/normal_half_margin"
            app:cardElevation="@dimen/normal_half_margin"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/normal_margin"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:text="@string/technician_details"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3"
                    >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        android:layout_weight="2"
                        />

                    <TextView
                        android:id="@+id/displayTechnicianName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="technician"
                        android:layout_weight="1"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3"
                    >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/email"
                        android:layout_weight="2"
                        />

                    <TextView
                        android:id="@+id/displayTechnicianEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="technician@mail.com"
                        android:layout_weight="1"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3"
                    >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/phone_number"
                        android:layout_weight="2"
                        />

                    <TextView
                        android:id="@+id/displayTechnicianPhoneNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="7087589685"
                        android:layout_weight="1"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3"
                    >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/visiting_date"
                        android:layout_weight="2"
                        />

                    <TextView
                        android:id="@+id/displayVisitingDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="21 Dec 2021"
                        android:layout_weight="1"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3"
                    >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/visiting_time"
                        android:layout_weight="2"
                        />

                    <TextView
                        android:id="@+id/displayVisitingTime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="10:55 am"
                        android:layout_weight="1"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/required_time"
                        android:layout_weight="2"
                        />
                    <TextView
                        android:id="@+id/displayRequiredTime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="20 min"
                        android:layout_weight="1"

                        />
                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/normal_margin"
            >

            <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/payment_details"
            android:textSize="22sp"
            android:layout_marginBottom="@dimen/normal_half_margin"
            />

            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/number_of_bookings"
                android:layout_weight="1"
                />

            <TextView
                android:id="@+id/displayNumberOfBookings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="3"
                android:layout_weight="1"
                />
        </LinearLayout>

            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/amount_per_booking"
                android:layout_weight="1"
                />

            <TextView
                android:id="@+id/displayAmountPerBooking"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="99"
                android:layout_weight="1"
                />


        </LinearLayout>

            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/total_amount"
                android:layout_weight="1"
                />

            <TextView
                android:id="@+id/displayTotalAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="297"
                android:layout_weight="1"

                />

        </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/normal_margin"
                >
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/wallet_balance"
                    android:textSize="18sp"
                    />

                <TextView
                    android:id="@+id/displayWalletBalance"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/demo_price"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    />
            </LinearLayout>

    </LinearLayout>


    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <LinearLayout
                android:id="@+id/bottomSheetFooter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_margin="10dp"
                android:weightSum="2"
                app:layout_constraintBottom_toBottomOf="parent">

                <Button
                    android:id="@+id/buttonCancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/color_red"
                    android:text="@string/cancel"
                    android:textAllCaps="false"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/buttonConform"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/color_blue"
                    android:text="@string/confirm"
                    android:textAllCaps="false"
                    tools:ignore="ButtonStyle,TextContrastCheck" />

            </LinearLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>